cmake_minimum_required(VERSION 3.27)
project(ev3lib)

set(SOURCE_FILES
        include/exceptions/EV3HardwareExceptions.h
        include/hardware/detail/lejos/motor_data.h
        include/hardware/detail/lejos/port_data.h
        include/hardware/detail/lms2012/ev3_constants.h
        include/hardware/detail/lms2012/ev3_types.h
		include/hardware/port/AnalogPort.h
		include/hardware/port/MultiModePort.h
		include/hardware/port/UartPort.h
		include/hardware/port/I2CPort.h
		include/hardware/port/SensorType.h
		include/hardware/port/BasicMotorPort.h
		include/hardware/port/TachoMotorPort.h
        include/hardware/detail/BatteryManager.h
        include/hardware/detail/device_traits.h
        include/hardware/detail/ev3_brick.h
        include/hardware/detail/ev3_device.h
        include/hardware/detail/handle.h
        include/hardware/detail/MotorManager.h
        include/hardware/detail/Power.h
        include/hardware/detail/SensorsManager.h
        include/hardware/detail/UIManager.h
        include/hardware/sensor/eeprom/AccelEepromWriter.h
        include/hardware/sensor/eeprom/GyroEepromWriter.h
        include/hardware/sensor/eeprom/MagEepromWriter.h
        include/hardware/sensor/scale/AccelScaleSelector.h
        include/hardware/sensor/scale/GyroScaleSelector.h
        include/hardware/sensor/scale/MagScaleSelector.h
        include/hardware/sensor/AnalogSensor.h
        include/hardware/sensor/HiTechnicGyro.h
        include/hardware/sensor/ImuLsm6ds3.h
        include/hardware/sensor/MultiModeSensor.h
        include/hardware/sensor/NXTLightSensor.h
        include/hardware/sensor/SensorMode.h
        include/hardware/sensor/SensorModes.h
        include/hardware/sensor/UartSensor.h
        include/hardware/sensor/I2CSensor.h
		include/hardware/sensor/CurrentSensorINA226.h
		include/hardware/motor/Tachometer.h
		include/hardware/motor/BasicMotor.h
		include/hardware/motor/UnregulatedMotor.h
        include/hardware/Battery.h
        include/hardware/Brick.h
        include/hardware/Button.h
		include/robotics/EncoderMotor.h
		include/robotics/SampleProvider.h
		include/robotics/Encoder.h
		include/robotics/DCMotor.h
		include/robotics/BaseMotor.h
		include/robotics/ReversedEncoderMotor.h
		include/utils/algorithm.h
        include/utils/utilities.h
        include/utils/str_const.h
		include/utils/type_utils.h
        src/hardware/detail/AnalogSensorHelpers.cpp
        src/hardware/detail/AnalogSensorHelpers.h
        src/hardware/detail/DetachSubscriber.h
        src/hardware/detail/ev3_brick.cpp
        src/hardware/detail/EV3AnalogPort.cpp
        src/hardware/detail/EV3AnalogPort.h
        src/hardware/detail/EV3Battery.cpp
        src/hardware/detail/EV3Battery.h
        src/hardware/detail/EV3DeviceManager.cpp
        src/hardware/detail/EV3DeviceManager.h
        src/hardware/detail/EV3MotorPort.cpp
        src/hardware/detail/EV3MotorPort.h
        src/hardware/detail/EV3SensorConstants.h
        src/hardware/detail/EV3I2CPort.cpp
        src/hardware/detail/EV3I2CPort.h
        src/hardware/detail/EV3UartPort.cpp
        src/hardware/detail/EV3UartPort.h
        src/hardware/detail/handle.cpp
        src/hardware/sensor/AnalogSensor.cpp
        src/hardware/sensor/HiTechnicGyro.cpp
        src/hardware/sensor/ImuLsm6ds3.cpp
        src/hardware/sensor/MultiModeSensor.cpp
        src/hardware/sensor/NXTLightSensor.cpp
        src/hardware/sensor/UartSensor.cpp
        src/hardware/sensor/I2CSensor.cpp
		src/hardware/sensor/CurrentSensorINA226.cpp
		src/hardware/motor/UnregulatedMotor.cpp
		src/hardware/motor/BasicMotor.cpp
        src/hardware/Battery.cpp
        src/hardware/Brick.cpp
        src/hardware/Button.cpp)

include_directories(include)

add_library(ev3lib STATIC ${SOURCE_FILES})

target_compile_features(ev3lib PUBLIC cxx_std_20)
